# nucleus-napari-env

./: main.py  pyproject.toml
Nucleus Napari.app/Contents/: Info.plist  document.wflow
Nucleus Napari.app/Contents/MacOS/: Automator Application Stub
Nucleus Napari.app/Contents/_CodeSignature/: CodeResources
share/: Napari.desktop
